force-app/main/default/objects/TestADL_TestLibDataLake__dlm/TestADL_TestLibDataLake__dlm.object-meta.xml
<CustomObject>
    <label>TestADL_TestLibDataLake</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>TestADL_TestLibDataLake</labelOverride>
        <masterLabel>TestADL_TestLibDataLake</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataModelAttributes>
</CustomObject>