force-app/main/default/objects/TestADL_TestLibDataLake__dlm/fields/contract_number__c.field-meta.xml
<CustomField>
    <fullName>contract_number__c</fullName>
    <label>contract_number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>contract_number</labelOverride>
        <masterLabel>contract_number</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>