force-app/main/default/objects/TestADL_TestLibDataLake__dlm/fields/policy_terms__c.field-meta.xml
<CustomField>
    <fullName>policy_terms__c</fullName>
    <label>policy_terms</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policy_terms</labelOverride>
        <masterLabel>policy_terms</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>