force-app/main/default/objects/TestADL_TestLibDataLake__dlm/fields/policyholder_name__c.field-meta.xml
<CustomField>
    <fullName>policyholder_name__c</fullName>
    <label>policyholder_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policyholder_name</labelOverride>
        <masterLabel>policyholder_name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>