force-app/main/default/objects/TestADL_TestLibDataLake__dlm/fields/rel_1768195391465_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1768195391465_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestADL_TestLibDataLake_SourceRecord_rel</label>
    <referenceTo>ADL_TestLib__dlm</referenceTo>
    <relationshipLabel>TestADL_TestLibDataLake_SourceRecord_rel</relationshipLabel>
    <relationshipName>rel_1768195391465_end</relationshipName>
    <type>Lookup</type>
</CustomField>